k8s/vote/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: 255990283375.dkr.ecr.us-east-1.amazonaws.com/voting-app-vote-${NAMESPACE}:${NAMESPACE}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
