k8s/vote/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: ${NAMESPACE}
spec:
  selector:
    app: vote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
